[workspace]
resolver = "3"
members = ["ruuvi-common", "ruuvi-gateway", "ruuvi-listener"]

[profile.ruuvi-listener-release]
inherits         = "release"
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
