[package]
name = "ruuvi-common"
version = "0.1.0"
edition = "2024"

[features]
# Enable std by default for host/server crates.
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0.225", features = ["derive"], default-features = false}
snow = { version = "0.10.0", default-features = false, features = ["default-resolver", "use-chacha20poly1305", "use-curve25519", "use-sha2" ]}

# [target]
