[package]
name = "ruuvi-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy_macro = "0.15.7"
futures-util = "0.3.31"
hmac = "0.12.1"
postcard = "1.1.3"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ruuvi-common = { path = "../ruuvi-common"}