[package]
edition = "2024"
name = "ruuvi-listener"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "ruuvi-listener"
path = "./src/main.rs"

[dependencies]
ruuvi-schema = { path = "../ruuvi-schema", default-features = false}

esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable", "critical-section"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "log-04",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
esp-alloc = "0.9.0"
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "esp-alloc",
  "esp32s3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "panic-handler", "println"] }
esp-hal-smartled = { version = "0.17.0", features = ["esp32s3"] }

embassy-net = { version = "0.8", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
] }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
embassy-futures = "0.1.1"
embassy-sync = "0.8.0"

log = "0.4.27"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
bt-hci = "0.6.0"
trouble-host = { version = "0.5.1", features = ["gatt", "scan"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
critical-section = "1.2.0"
static_cell      = "2.1.1"
heapless = "0.9.2"
dotenvy_macro = "0.15.7"
serde-json-core = "0.6.0"
itoa = "1.0.18"
serde = { version = "1.0.228", features = ["derive"], default-features = false }
postcard = { version = "1.1.3", features = ["alloc"] }
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.11.0", default-features = false }
const-str = "1.1.0"
snow = { version = "0.10.0", default-features = false, features = [
  "default-resolver",
  "use-chacha20poly1305",
  "use-curve25519",
  "use-sha2",
] }
anyhow = { version = "1.0.102", default-features = false }
smart-leds = "0.4.0"

[profile.dev]
opt-level = 's'

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
